removed parametrization of controller
Former-commit-id: 43c7f0449b92da5a41d8e978c2b6acc7507eab51